pko/src/multi/components/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
    package-operator.run/phase: application
  creationTimestamp: "2022-09-07T10:55:39Z"
  labels:
    app: quinoa-wind-turbine
    app.kubernetes.io/component: quinoa-wind-turbine
    app.kubernetes.io/instance: quinoa-wind-turbine
    app.kubernetes.io/name: quinoa-wind-turbine
    app.kubernetes.io/part-of: wind-turbine
    app.openshift.io/runtime-version: 1.0.0
  name: quinoa-wind-turbine
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: quinoa-wind-turbine
    deployment: quinoa-wind-turbine
  sessionAffinity: None
  type: ClusterIP
